@@ -1,4 +1,8 @@
 
+
+- Recurrence rules with DTSTART in UTC will now sortof work (thanks to Max
+  Werner for providing the patch).
+
 - Added convenience methods for setting and getting title and org fiels (thanks
   to Jade Meskill for providing the patch).
 
@@ -7,6 +11,7 @@
 
 - Support Highrisehq.com's broken google talk field (see test_vcard.rb for
   examples, thanks to Terry Tong for reporting).
+
 
 0.619 - 2008-03-30
 
